<resources>
    <string name="app_name">Formulario de Contacto</string>
    <string name="texto_nombre">Nombre completo</string>
    <string name="texto_fecha">Fecha de Nacimiento</string>
    <string name="texto_telefono">Teléfono</string>
    <string name="texto_email">Email</string>
    <string name="texto_descripcion">Descripción Contacto</string>
    <string name="texto_boton">Siguiente</string>
    <string name="texto_editar">Editar Datos</string>
</resources>